ingress/ingress-test-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: ingress-test-service
spec:
 type: ClusterIP
 selector:
  app: ingress-test
 ports:
 - protocol: TCP
   port: 80
   targetPort: 80
