ingress/ingress-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-test-ingress
spec:
 ingressClassName: nginx
 rules:
 - host: ingresstest.acloud.guru
   http:
    paths:
    - path: /
      pathType: Prefix
      backend:
       service:
        name: ingress-test-service
        port:
         number: 80
